data/parser/debug/parser.out
Grammar:

Rule 0     S' -> start
Rule 1     empty -> <empty>
Rule 2     start -> { start } start
Rule 3     start -> statement start
Rule 4     start -> empty
Rule 5     expression -> [ list ]
Rule 6     expression -> EYE ( expression )
Rule 7     expression -> ONES ( expression )
Rule 8     expression -> ZEROS ( expression )
Rule 9     expression -> - expression  [precedence=right, level=6]
Rule 10    expression -> expression '  [precedence=right, level=5]
Rule 11    expression -> expression = expression
Rule 12    expression -> expression EQ expression  [precedence=nonassoc, level=2]
Rule 13    expression -> expression NEQ expression  [precedence=nonassoc, level=2]
Rule 14    expression -> expression GE expression  [precedence=nonassoc, level=2]
Rule 15    expression -> expression LE expression  [precedence=nonassoc, level=2]
Rule 16    expression -> expression GT expression  [precedence=nonassoc, level=2]
Rule 17    expression -> expression LT expression  [precedence=nonassoc, level=2]
Rule 18    expression -> expression DOTDIVIDE expression  [precedence=left, level=4]
Rule 19    expression -> expression DOTTIMES expression  [precedence=left, level=4]
Rule 20    expression -> expression DOTMINUS expression  [precedence=left, level=3]
Rule 21    expression -> expression DOTPLUS expression  [precedence=left, level=3]
Rule 22    expression -> expression / expression  [precedence=left, level=4]
Rule 23    expression -> expression * expression  [precedence=left, level=4]
Rule 24    expression -> expression - expression  [precedence=right, level=6]
Rule 25    expression -> expression + expression  [precedence=left, level=3]
Rule 26    expression -> ( expression )
Rule 27    expression -> STRING
Rule 28    expression -> FLOATNUM
Rule 29    expression -> INTNUM
Rule 30    list_element -> list
Rule 31    list_element -> ID
Rule 32    list_element -> STRING
Rule 33    list_element -> FLOATNUM
Rule 34    list_element -> INTNUM
Rule 35    spread_elements -> list_element
Rule 36    spread_elements -> spread_elements , list_element
Rule 37    list -> [ spread_elements ]
Rule 38    list -> list , [ spread_elements ]
Rule 39    assignable -> ID [ indexes ]
Rule 40    assignable -> ID
Rule 41    indexes -> INTNUM
Rule 42    indexes -> INTNUM , indexes
Rule 43    statement -> FOR ID = range block
Rule 44    statement -> WHILE expression block
Rule 45    statement -> IF expression block ELSE block
Rule 46    statement -> IF expression block
Rule 47    statement -> PRINT prints ;
Rule 48    statement -> expression ;
Rule 49    statement -> BREAK ;
Rule 50    statement -> CONTINUE ;
Rule 51    statement -> RETURN expression ;
Rule 52    statement -> assignable DIVASSIGN expression ;
Rule 53    statement -> assignable MULASSIGN expression ;
Rule 54    statement -> assignable SUBASSIGN expression ;
Rule 55    statement -> assignable ADDASSIGN expression ;
Rule 56    statement -> assignable = expression ;
Rule 57    block -> { start }
Rule 58    block -> statement
Rule 59    prints -> expression ;
Rule 60    prints -> expression , prints
Rule 61    range -> INTNUM : ID
Rule 62    range -> ID : INTNUM
Rule 63    range -> ID : ID
Rule 64    range -> INTNUM : INTNUM

Terminals, with rules where they appear:

'                    : 10
(                    : 6 7 8 26
)                    : 6 7 8 26
*                    : 23
+                    : 25
,                    : 36 38 42 60
-                    : 9 24
/                    : 22
:                    : 61 62 63 64
;                    : 47 48 49 50 51 52 53 54 55 56 59
=                    : 11 43 56
ADDASSIGN            : 55
BREAK                : 49
CONTINUE             : 50
DIVASSIGN            : 52
DOTDIVIDE            : 18
DOTMINUS             : 20
DOTPLUS              : 21
DOTTIMES             : 19
ELSE                 : 45
EQ                   : 12
EYE                  : 6
FLOATNUM             : 28 33
FOR                  : 43
GE                   : 14
GT                   : 16
ID                   : 31 39 40 43 61 62 63 63
IF                   : 45 46
INTNUM               : 29 34 41 42 61 62 64 64
LE                   : 15
LT                   : 17
MULASSIGN            : 53
NEQ                  : 13
ONES                 : 7
PRINT                : 47
RETURN               : 51
STRING               : 27 32
SUBASSIGN            : 54
WHILE                : 44
ZEROS                : 8
[                    : 5 37 38 39
]                    : 5 37 38 39
error                : 
{                    : 2 57
}                    : 2 57

Nonterminals, with rules where they appear:

assignable           : 52 53 54 55 56
block                : 43 44 45 45 46
empty                : 4
expression           : 6 7 8 9 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 44 45 46 48 51 52 53 54 55 56 59 60
indexes              : 39 42
list                 : 5 30 38
list_element         : 35 36
prints               : 47 60
range                : 43
spread_elements      : 36 37 38
start                : 2 2 3 57 0
statement            : 3 58


state 0

    (0) S' -> . start
    (2) start -> . { start } start
    (3) start -> . statement start
    (4) start -> . empty
    (43) statement -> . FOR ID = range block
    (44) statement -> . WHILE expression block
    (45) statement -> . IF expression block ELSE block
    (46) statement -> . IF expression block
    (47) statement -> . PRINT prints ;
    (48) statement -> . expression ;
    (49) statement -> . BREAK ;
    (50) statement -> . CONTINUE ;
    (51) statement -> . RETURN expression ;
    (52) statement -> . assignable DIVASSIGN expression ;
    (53) statement -> . assignable MULASSIGN expression ;
    (54) statement -> . assignable SUBASSIGN expression ;
    (55) statement -> . assignable ADDASSIGN expression ;
    (56) statement -> . assignable = expression ;
    (1) empty -> .
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    (39) assignable -> . ID [ indexes ]
    (40) assignable -> . ID
    {               shift and go to state 2
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    $end            reduce using rule 1 (empty -> .)
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23
    ID              shift and go to state 6

    start                          shift and go to state 1
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    expression                     shift and go to state 8
    assignable                     shift and go to state 14

state 1

    (0) S' -> start .


state 2

    (2) start -> { . start } start
    (2) start -> . { start } start
    (3) start -> . statement start
    (4) start -> . empty
    (43) statement -> . FOR ID = range block
    (44) statement -> . WHILE expression block
    (45) statement -> . IF expression block ELSE block
    (46) statement -> . IF expression block
    (47) statement -> . PRINT prints ;
    (48) statement -> . expression ;
    (49) statement -> . BREAK ;
    (50) statement -> . CONTINUE ;
    (51) statement -> . RETURN expression ;
    (52) statement -> . assignable DIVASSIGN expression ;
    (53) statement -> . assignable MULASSIGN expression ;
    (54) statement -> . assignable SUBASSIGN expression ;
    (55) statement -> . assignable ADDASSIGN expression ;
    (56) statement -> . assignable = expression ;
    (1) empty -> .
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    (39) assignable -> . ID [ indexes ]
    (40) assignable -> . ID
    {               shift and go to state 2
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    }               reduce using rule 1 (empty -> .)
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23
    ID              shift and go to state 6

    start                          shift and go to state 24
    statement                      shift and go to state 3
    empty                          shift and go to state 4
    expression                     shift and go to state 8
    assignable                     shift and go to state 14

state 3

    (3) start -> statement . start
    (2) start -> . { start } start
    (3) start -> . statement start
    (4) start -> . empty
    (43) statement -> . FOR ID = range block
    (44) statement -> . WHILE expression block
    (45) statement -> . IF expression block ELSE block
    (46) statement -> . IF expression block
    (47) statement -> . PRINT prints ;
    (48) statement -> . expression ;
    (49) statement -> . BREAK ;
    (50) statement -> . CONTINUE ;
    (51) statement -> . RETURN expression ;
    (52) statement -> . assignable DIVASSIGN expression ;
    (53) statement -> . assignable MULASSIGN expression ;
    (54) statement -> . assignable SUBASSIGN expression ;
    (55) statement -> . assignable ADDASSIGN expression ;
    (56) statement -> . assignable = expression ;
    (1) empty -> .
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    (39) assignable -> . ID [ indexes ]
    (40) assignable -> . ID
    {               shift and go to state 2
    FOR             shift and go to state 5
    WHILE           shift and go to state 7
    IF              shift and go to state 9
    PRINT           shift and go to state 10
    BREAK           shift and go to state 11
    CONTINUE        shift and go to state 12
    RETURN          shift and go to state 13
    $end            reduce using rule 1 (empty -> .)
    }               reduce using rule 1 (empty -> .)
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23
    ID              shift and go to state 6

    statement                      shift and go to state 3
    start                          shift and go to state 25
    empty                          shift and go to state 4
    expression                     shift and go to state 8
    assignable                     shift and go to state 14

state 4

    (4) start -> empty .
    $end            reduce using rule 4 (start -> empty .)
    }               reduce using rule 4 (start -> empty .)


state 5

    (43) statement -> FOR . ID = range block
    ID              shift and go to state 26


state 6

    (39) assignable -> ID . [ indexes ]
    (40) assignable -> ID .
    [               shift and go to state 27
    DIVASSIGN       reduce using rule 40 (assignable -> ID .)
    MULASSIGN       reduce using rule 40 (assignable -> ID .)
    SUBASSIGN       reduce using rule 40 (assignable -> ID .)
    ADDASSIGN       reduce using rule 40 (assignable -> ID .)
    =               reduce using rule 40 (assignable -> ID .)


state 7

    (44) statement -> WHILE . expression block
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23

    expression                     shift and go to state 28

state 8

    (48) statement -> expression . ;
    (10) expression -> expression . '
    (11) expression -> expression . = expression
    (12) expression -> expression . EQ expression
    (13) expression -> expression . NEQ expression
    (14) expression -> expression . GE expression
    (15) expression -> expression . LE expression
    (16) expression -> expression . GT expression
    (17) expression -> expression . LT expression
    (18) expression -> expression . DOTDIVIDE expression
    (19) expression -> expression . DOTTIMES expression
    (20) expression -> expression . DOTMINUS expression
    (21) expression -> expression . DOTPLUS expression
    (22) expression -> expression . / expression
    (23) expression -> expression . * expression
    (24) expression -> expression . - expression
    (25) expression -> expression . + expression
    ;               shift and go to state 29
    '               shift and go to state 30
    =               shift and go to state 31
    EQ              shift and go to state 32
    NEQ             shift and go to state 33
    GE              shift and go to state 34
    LE              shift and go to state 35
    GT              shift and go to state 36
    LT              shift and go to state 37
    DOTDIVIDE       shift and go to state 38
    DOTTIMES        shift and go to state 39
    DOTMINUS        shift and go to state 40
    DOTPLUS         shift and go to state 41
    /               shift and go to state 42
    *               shift and go to state 43
    -               shift and go to state 44
    +               shift and go to state 45


state 9

    (45) statement -> IF . expression block ELSE block
    (46) statement -> IF . expression block
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23

    expression                     shift and go to state 46

state 10

    (47) statement -> PRINT . prints ;
    (59) prints -> . expression ;
    (60) prints -> . expression , prints
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23

    prints                         shift and go to state 47
    expression                     shift and go to state 48

state 11

    (49) statement -> BREAK . ;
    ;               shift and go to state 49


state 12

    (50) statement -> CONTINUE . ;
    ;               shift and go to state 50


state 13

    (51) statement -> RETURN . expression ;
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23

    expression                     shift and go to state 51

state 14

    (52) statement -> assignable . DIVASSIGN expression ;
    (53) statement -> assignable . MULASSIGN expression ;
    (54) statement -> assignable . SUBASSIGN expression ;
    (55) statement -> assignable . ADDASSIGN expression ;
    (56) statement -> assignable . = expression ;
    DIVASSIGN       shift and go to state 52
    MULASSIGN       shift and go to state 53
    SUBASSIGN       shift and go to state 54
    ADDASSIGN       shift and go to state 55
    =               shift and go to state 56


state 15

    (5) expression -> [ . list ]
    (37) list -> . [ spread_elements ]
    (38) list -> . list , [ spread_elements ]
    [               shift and go to state 57

    list                           shift and go to state 58

state 16

    (6) expression -> EYE . ( expression )
    (               shift and go to state 59


state 17

    (26) expression -> ( . expression )
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23

    expression                     shift and go to state 60

state 18

    (7) expression -> ONES . ( expression )
    (               shift and go to state 61


state 19

    (8) expression -> ZEROS . ( expression )
    (               shift and go to state 62


state 20

    (9) expression -> - . expression
    (5) expression -> . [ list ]
    (6) expression -> . EYE ( expression )
    (7) expression -> . ONES ( expression )
    (8) expression -> . ZEROS ( expression )
    (9) expression -> . - expression
    (10) expression -> . expression '
    (11) expression -> . expression = expression
    (12) expression -> . expression EQ expression
    (13) expression -> . expression NEQ expression
    (14) expression -> . expression GE expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression GT expression
    (17) expression -> . expression LT expression
    (18) expression -> . expression DOTDIVIDE expression
    (19) expression -> . expression DOTTIMES expression
    (20) expression -> . expression DOTMINUS expression
    (21) expression -> . expression DOTPLUS expression
    (22) expression -> . expression / expression
    (23) expression -> . expression * expression
    (24) expression -> . expression - expression
    (25) expression -> . expression + expression
    (26) expression -> . ( expression )
    (27) expression -> . STRING
    (28) expression -> . FLOATNUM
    (29) expression -> . INTNUM
    [               shift and go to state 15
    EYE             shift and go to state 16
    ONES            shift and go to state 18
    ZEROS           shift and go to state 19
    -               shift and go to state 20
    (               shift and go to state 17
    STRING          shift and go to state 21
    FLOATNUM        shift and go to state 22
    INTNUM          shift and go to state 23

    expression                     shift and go to state 63

state 21

    (27) expression -> STRING .
    ;               reduce using rule 27 (expression -> STRING .)
    '               reduce using rule 27 (expression -> STRING .)
    =               reduce using rule 27 (expression -> STRING .)
    EQ              reduce using rule 27 (expression -> STRING .)
    NEQ             reduce using rule 27 (expression -> STRING .)
    GE              reduce using rule 27 (expression -> STRING .)
    LE              reduce using rule 27 (expression -> STRING .)
    GT              reduce using rule 27 (expression -> STRING .)
    LT              reduce using rule 27 (expression -> STRING .)
    DOTDIVIDE       reduce using rule 27 (expression -> STRING .)
    DOTTIMES        reduce using rule 27 (expression -> STRING .)
    DOTMINUS        reduce using rule 27 (expression -> STRING .)
    DOTPLUS         reduce using rule 27 (expression -> STRING .)
    /               reduce using rule 27 (expression -> STRING .)
    *               reduce using rule 27 (expression -> STRING .)
    -               reduce using rule 27 (expression -> STRING .)
    +               reduce using rule 27 (expression -> STRING .)
    {               reduce using rule 27 (expression -> STRING .)
    FOR             reduce using rule 27 (expression -> STRING .)
    WHILE           reduce using rule 27 (expression -> STRING .)
    IF              reduce using rule 27 (expression -> STRING .)
    PRINT           reduce using rule 27 (expression -> STRING .)
    BREAK           reduce using rule 27 (expression -> STRING .)
    CONTINUE        reduce using rule 27 (expression -> STRING .)
    RETURN          reduce using rule 27 (expression -> STRING .)
    [               reduce using rule 27 (expression -> STRING .)
    EYE             reduce using rule 27 (expression -> STRING .)
    ONES            reduce using rule 27 (expression -> STRING .)
    ZEROS           reduce using rule 27 (expression -> STRING .)
    (               reduce using rule 27 (expression -> STRING .)
    STRING          reduce using rule 27 (expression -> STRING .)
    FLOATNUM        reduce using rule 27 (expression -> STRING .)
    INTNUM          reduce using rule 27 (expression -> STRING .)
    ID              reduce using rule 27 (expression -> STRING .)
    ,               reduce using rule 27 (expression -> STRING .)
    )               reduce using rule 27 (expression -> STRING .)


state 22

    (28) expression -> FLOATNUM .
    ;               reduce using rule 28 (expression -> FLOATNUM .)
    '               reduce using rule 28 (expression -> FLOATNUM .)
    =               reduce using rule 28 (expression -> FLOATNUM .)
    EQ              reduce using rule 28 (expression -> FLOATNUM .)
    NEQ             reduce using rule 28 (expression -> FLOATNUM .)
    GE              reduce using rule 28 (expression -> FLOATNUM .)
    LE              reduce using rule 28 (expression -> FLOATNUM .)
    GT              reduce using rule 28 (expression -> FLOATNUM .)
    LT              reduce using rule 28 (expression -> FLOATNUM .)
    DOTDIVIDE       reduce using rule 28 (expression -> FLOATNUM .)
    DOTTIMES        reduce using rule 28 (expression -> FLOATNUM .)
    DOTMINUS        reduce using rule 28 (expression -> FLOATNUM .)
    DOTPLUS         reduce using rule 28 (expression -> FLOATNUM .)
    /               reduce using rule 28 (expression -> FLOATNUM .)
    *               reduce using rule 28 (expression -> FLOATNUM .)
    -               reduce using rule 28 (expression -> FLOATNUM .)
    +               reduce using rule 28 (expression -> FLOATNUM .)
    {               reduce using rule 28 (expression -> FLOATNUM .)
    FOR             reduce using rule 28 (expression -> FLOATNUM .)
    WHILE           reduce using rule 28 (expression -> FLOATNUM .)
    IF              reduce using rule 28 (expression -> FLOATNUM .)
    PRINT           reduce using rule 28 (expression -> FLOATNUM .)
    BREAK           reduce using rule 28 (expression -> FLOATNUM .)
    CONTINUE        reduce using rule 28 (expression -> FLOATNUM .)
    RETURN          reduce using rule 28 (expression -> FLOATNUM .)
    [               reduce using rule 28 (expression -> FLOATNUM .)
    EYE             reduce using rule 28 (expression -> FLOATNUM .)
    ONES            reduce using rule 28 (expression -> FLOATNUM .)
    ZEROS           reduce using rule 28 (expression -> FLOATNUM .)
    (               reduce using rule 28 (expression -> FLOATNUM .)
    STRING          reduce using rule 28 (expression -> FLOATNUM .)
    FLOATNUM        reduce using rule 28 (expression -> FLOATNUM .)
    INTNUM          reduce using rule 28 (expression -> FLOATNUM .)
    ID              reduce using rule 28 (expression -> FLOATNUM .)
    ,               reduce using rule 28 (expression -> FLOATNUM .)
    )               reduce using rule 28 (expression -> FLOATNUM .)


state 23

    (29) expression -> INTNUM .
    ;               reduce using rule 29 (expression -> INTNUM .)
    '               reduce using rule 29 (expression -> INTNUM .)
    =               reduce using rule 29 (expression -> INTNUM .)
    EQ              reduce using rule 29 (expression -> INTNUM .)
    NEQ             reduce using rule 29 (expression -> INTNUM .)
    GE              reduce using rule 29 (expression -> INTNUM .)
    LE              reduce using rule 29 (expression -> INTNUM .)
    GT              reduce using rule 29 (expression -> INTNUM .)
    LT              reduce using rule 29 (expression -> INTNUM .)
    DOTDIVIDE       reduce using rule 29 (expression -> INTNUM .)
    DOTTIMES        reduce using rule 29 (expression -> INTNUM .)
    DOTMINUS        reduce using rule 29 (expression -> INTNUM .)
    DOTPLUS         reduce using rule 29 (expression -> INTNUM .)
    /               reduce using rule 29 (expression -> INTNUM .)
    *               reduce using rule 29 (expression -> INTNUM .)
    -               reduce using rule 29 (expression -> INTNUM .)
    +               reduce using rule 29 (expression -> INTNUM .)
    {               reduce using rule 29 (expression -> INTNUM .)
    FOR             reduce using rule 29 (expression -> INTNUM .)
    WHILE           reduce using rule 29 (expression -> INTNUM .)
    IF              reduce using rule 29 (expression -> INTNUM .)
    PRINT           reduce using rule 29 (expression -> INTNUM .)
    BREAK           reduce using rule 29 (expression -> INTNUM .)
    CONTINUE        reduce using rule 29 (expression -> INTNUM .)
    RETURN          reduce using rule 29 (expression -> INTNUM .)
    [               reduce using rule 29 (expression -> INTNUM .)
    EYE             reduce using rule 29 (expression -> INTNUM .)
    ONES            reduce using rule 29 (expression -> INTNUM .)
    ZEROS           reduce using rule 29 (expression -> INTNUM .)
    (               reduce using rule 29 (expression -> INTNUM .)
    STRING          reduce using rule 29 (expression -> INTNUM .)
    FLOATNUM        reduce using rule 29 (expression -> INTNUM .)
    INTNUM          reduce using rule 29 (expression -> INTNUM .)
    ID              reduce using rule 29 (expression -> INTNUM .)
    ,               reduce using rule 29 (expression -> INTNUM .)
    )               reduce using rule 29 (expression -> INTNUM .)


state 24

    (2) start -> { start . } start
    }               shift and go to state 64


state 25

    (3) start -> statement start .
    $end            reduce using rule 3 (start -> statement start .)
    }               reduce using rule 3 (start -> statement start .)


state 26

    (43) statement -> FOR ID . = range block
    =               shift and go to state 65


state 27

    (39) assignable -> ID [ . indexes ]
    (41) indexes -> . INTNUM
    (42) indexes -> . INTNUM , indexes
    INTNUM          shift and go to state 67

    indexes                        shift and go to state 66

state 28
